--- a/LinearRegression/LinearRegression.ipynb
+++ b/LinearRegression/LinearRegression.ipynb
@@ -377,7 +377,7 @@
     }
    ],
    "source": [
-    "inear_regression = MatrixLinearRegression()\n",
+    "linear_regression = MatrixLinearRegression()\n",
     "linear_regression.fit(X_train_s, y_train)\n",
     "pred_res = matrix_linear_regression.predict(X_test_s)\n",
     "r2 = r2_score(y_test, matrix_lr_pred_res)\n",
